/*
 * $Id: ChangeLog,v 1.5844 2007/12/28 13:10:54 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-28 18:15 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbpp.h
  * source/pp/ppcore.c
    % added some speed optimizations - it's not done in the way I want to
      have in the final version but with some very small modifications it
      should make people using a lot of #[x]translate (Enrico ;-)) happy.
    (Borrowed from Harbour, by Przemyslaw Czerpak)

2007-12-28 16:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/common/hbver.c
    * Silenced a warning.

2007-12-28 15.50 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * include/hbtypes.h
  * source/vm/maindllp.c
    ! use static handle to improve speed
    + basic file i/o : hb_fsClose, hb_fsDelete, hb_fsOpen, hb_fsRead,
      hb_fsSeek, hb_fsWrite and hb_fsCreate and hb_ret

2007-12-28 05:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/common/hbver.c
    ! Fixed memory corruption from my previous commit.

2007-12-27 22:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * include\hbcomp.h
    - removed LANG_JAVA from LANGUAGES.

  * contrib\pgsql
    + added make_pc.bat (to build libhbpg.lib)
    + added makefile.pc (idem)
    + added pocc.mak (to build libpq from Postgresql sources under Pelles C).
    + added readmepc.txt (explain how to build libpq under Pelles C).
    + created pgrdd subfolder
    ! moved pgrdd.prg and tstpgrdd.prg to pgrdd subfolder.

2007-12-27 17.40 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * config/os2
     * global.cf, faster way to delete files on clean.

2007-12-27 17.25 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * include/hbdefs.h
     * removed HB_LONG_LONG_OFF definition for OS/2 build. There is no
       HB_USE_LARGEFILE64 support for OS/2 yet.
